@@ -1,6 +1,10 @@
+Implement posix_openpt, grantpt, unlockpt and ptsname
+  to allow usage of pseudo ttys
+
 Later:
 
 See Mail Laurent Feb 02 2011
+  --> partially done
 
 Sort out SIGCHLD handler issues, cooperate with GAP kernel's handler
   --> later
