@@ -8,6 +8,8 @@
 
   - Use new build setup using automake/autoconf/libtool
   - Move repository to git@git.gap-system.org/io
+  - Updated the documentation of IO_select
+
   
 
 ==========================
